prevent zoom on mobile using css

--- a/client/styles.css
+++ b/client/styles.css
@@ -514,3 +514,11 @@ div.full-width {
   }
   
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
